--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ img {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .navigation {
@@ -103,6 +104,23 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link.carrent {
+    position: relative;
+    color:#404BBF;
+}
+
+.link.carrent::after {
+    content: '';
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 
 .link:hover {
@@ -139,7 +157,17 @@ img {
     font-size: 16px;
     color: #434455;
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.addres-link:focus {
+    color: #404bbf;
+}
+
+.addres-link:hover {
+    color: #404bbf;
+}
+
 
 /*main*/
 
@@ -365,10 +393,41 @@ img {
     row-gap: 48px;
 }
 
+.section-overlay {
+    position: relative;
+    width: 360px;
+    height: 300px;
+    overflow: hidden;
+}
+
+.overlay-text {
+    position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms ease-in-out;
+        background: #4d5ae5;
+        font-weight: 400;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            color: #f4f4fd;
+            text-align: center;
+            padding: 40px 32px 164px 32px;
+}
+
+.section-overlay:hover .overlay-text {
+    transform: translateY(0);
+}
+
 /*footer*/
 
 .footer {
     background: #2e2f42;
+    padding: 100px 0;
+    color: #ffffff
 }
 
 .title-item {
@@ -386,12 +445,7 @@ img {
     margin-bottom: 8px;
 }
 
-.footer {
-    padding: 100px 0;
-}
-
 .footer-logo {
-    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     letter-spacing: 0.03em;
@@ -403,21 +457,69 @@ img {
 }
 
 .footer-span {
-    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     line-height: 1.17;
     color: #f4f4fd;
+    max-width: 264px;
 }
 
 .text-footer {
-    font-family: "Roboto", sans-serif;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
-    max-width: 264px;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        width: 264px;
+            height: 112px;
+}
+
+.footer-media {
+    width: 208px;
+    height: 80px;
+}
+
+.footer-container {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 120px;
+    justify-content: flex-start;
+}
+
+.footer-media-text {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #ffffff;
+        margin-bottom: 16px;
+}
+
+.footer-list {
+    display: flex;
+        justify-content: center;
+        gap: 16px;
+}
+
+.footer-icon {
+    width: 40px;
+        height: 40px;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: background-color 250ms ease;
+}
+
+.footer-icon:hover,
+.footer-icon:focus {
+    background-color: #31d0aa;
+}
+
+.footer-icon {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
