--- a/css/styles.css
+++ b/css/styles.css
@@ -174,10 +174,9 @@ img {
 .main {
     padding: 188px 0;
     background: #2e2f42;
-    background-image: linear-gradient(to bottom,
-                rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7)),
-            url("../images/people-office\ .jpg");
+    background-image:
+            linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/people-office\ .jpg);
         margin: 0 auto;
         max-width: 1440px;
         background-repeat: no-repeat;
