--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,6 @@ img {
 }
 
 .button {
-    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -217,6 +216,7 @@ img {
     height: 56px;
     margin-left: auto;
     margin-right: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover {
@@ -375,7 +375,6 @@ img {
 }
 
 .portfolio {
-    font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11111;
@@ -397,28 +396,32 @@ img {
     width: 360px;
     height: 300px;
     overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-text {
     position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        transform: translateY(100%);
-        transition: transform 250ms ease-in-out;
-        background: #4d5ae5;
-        font-weight: 400;
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
-            color: #f4f4fd;
-            text-align: center;
-            padding: 40px 32px 164px 32px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #4d5ae5;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    text-align: center;
+    padding: 40px 32px;
 }
 
 .section-overlay:hover .overlay-text {
     transform: translateY(0);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /*footer*/
@@ -482,10 +485,11 @@ img {
 
 .footer-container {
     display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 120px;
-    justify-content: flex-start;
+    align-items: baseline;
+}
+
+.footer-link {
+    margin-right: 120px;
 }
 
 .footer-media-text {
