--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ img {
     background: #2e2f42;
     background-image:
             linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-            url(../images/people-office\ .jpg);
+            url(../images/people-office.jpg);
         margin: 0 auto;
         max-width: 1440px;
         background-repeat: no-repeat;
@@ -401,8 +401,8 @@ img {
     width: 360px;
     height: 300px;
     overflow: hidden;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .overlay-text {
     position: absolute;
@@ -411,7 +411,6 @@ img {
     width: 100%;
     height: 100%;
     transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #4d5ae5;
     font-weight: 400;
     font-size: 16px;
@@ -420,14 +419,20 @@ img {
     color: #f4f4fd;
     text-align: center;
     padding: 40px 32px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section-overlay:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .section-overlay:hover .overlay-text {
-    transform: translateY(0);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
 }
+
 
 .portfolio-list-item {
     padding: 32px 16px;
