--- a/css/styles.css
+++ b/css/styles.css
@@ -394,6 +394,9 @@ img {
 .title-item {
     width: calc((100% - 48px) / 3);
     background-color: #ffffff;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .section-overlay {
@@ -419,8 +422,8 @@ img {
     color: #f4f4fd;
     text-align: center;
     padding: 40px 32px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-            box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            
 }
 
 .section-overlay:hover {
