--- a/css/styles.css
+++ b/css/styles.css
@@ -404,6 +404,7 @@ img {
     width: 360px;
     height: 300px;
     overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
