--- a/css/styles.css
+++ b/css/styles.css
@@ -404,7 +404,6 @@ img {
     width: 360px;
     height: 300px;
     overflow: hidden;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -423,7 +422,8 @@ img {
     color: #f4f4fd;
     text-align: center;
     padding: 40px 32px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
             
 }
 
