--- a/css/styles.css
+++ b/css/styles.css
@@ -422,8 +422,8 @@ img {
     color: #f4f4fd;
     text-align: center;
     padding: 40px 32px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                
             
 }
 
