--- a/css/styles.css
+++ b/css/styles.css
@@ -397,6 +397,7 @@ img {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-overlay {
@@ -422,7 +423,7 @@ img {
     color: #f4f4fd;
     text-align: center;
     padding: 40px 32px;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
                 
             
 }
@@ -435,6 +436,12 @@ img {
 
 .section-overlay:hover .overlay-text {
     transform: translateY(0%);
+}
+
+.title-item:hover {
+    box-shadow: 0px 4px 12px rgba(46, 47, 66, 0.1),
+        0px 4px 4px rgba(46, 47, 66, 0.15),
+        0px 6px 4px rgba(46, 47, 66, 0.1);
 }
 
 
