--- a/css/styles.css
+++ b/css/styles.css
@@ -394,6 +394,9 @@ img {
 .title-item {
     width: calc((100% - 48px) / 3);
     background-color: #ffffff;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+            0px 1px 1px rgba(46, 47, 66, 0.16),
+            0px 2px 1px rgba(46, 47, 66, 0.08);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -438,7 +441,7 @@ img {
 .title-item:hover {
     box-shadow: 0px 4px 12px rgba(46, 47, 66, 0.1),
         0px 4px 4px rgba(46, 47, 66, 0.15),
-        0px 6px 4px rgba(46, 47, 66, 0.1);
+        0px 6px 4px rgba(46, 47, 66, 0.1)
 }
 
 
