--- a/css/styles.css
+++ b/css/styles.css
@@ -437,7 +437,7 @@ img {
 .card-item:hover {
     box-shadow: 0px 4px 12px rgba(46, 47, 66, 0.1),
         0px 4px 4px rgba(46, 47, 66, 0.15),
-        0px 6px 4px rgba(46, 47, 66, 0.1)
+        0px 6px 4px rgba(46, 47, 66, 0.1);
 }
 
 
