--- a/css/styles.css
+++ b/css/styles.css
@@ -395,6 +395,8 @@ img {
     width: calc((100% - 48px) / 3);
     background-color: #ffffff;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+        overflow: hidden;
 }
 
 .section-overlay {
@@ -422,7 +424,7 @@ img {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-overlay:hover .overlay-text {
+.card-item:hover .overlay-text {
     transform: translateY(0%);
 }
 
@@ -431,7 +433,6 @@ img {
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
 
 .portfolio-list-item {
     padding: 32px 16px;
